myapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp # Name of our pod
spec:
  restartPolicy: Never
     
  volumes:
  - name: date  # Creating a shared volume for my containers
    emptyDir: {}
  containers:
  - name: nginx # Name of first  container
    image: nginx # Image for second container
    ports:
      - containerPort: 80 # Defining what port to use.
    volumeMounts:
    - name: date
      mountPath: /usr/share/nginx/html # Where nginx will serve the written file
     
  - name: redis
    image: redis

  - name: memcached
    image: launcher.gcr.io/google/memcached1


  - name: consul
    image: consul:latest
