redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  namespace: web
spec:
  containers:
  - image: launcher.gcr.io/google/redis4 
    name: redis
    ports:
    - containerPort: 9090
      name: http
      protocol: TCP
