test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: test-pod
  name: test-pod
  namespace: test
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: test
    resources:
      requests:
        cpu: "200m"
        memory: "1Gi"
