apache.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: kolomyya/httpd
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  selector:
    app: apache
  ports:
    - protocol: "TCP"
      port: 8080  #Port accessible inside cluster
      targetPort: 80  #Port to forward to inside the pod
      nodePort: 30001  #Port accessible outside cluster
  type: LoadBalancer
