nginx-rc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  ports:
  - name: http
    nodePort: 30445    # Listening port on Nodes
    port: 80           # Listening port on ClusterIP
    targetPort: 82     # Pods listening port
    protocol: TCP
  selector:
    app: nginx-test
